# portfolio-website

./: .gitignore
app/src/: App.css  App.jsx  index.css
backend/: .env.example  .gitignore  README.md  REFACTOR.md  active_stations_2023.csv  config.py  console.py  ne_weather_stations.csv  noaa_exploration_backup.ipynb  pyproject.toml  requirements.txt  test_datalake.py  test_setup.py
backend/clients/: __init__.py  weather.py
backend/config/: resorts.yaml
backend/datalake/: README.md  __init__.py  writer.py
backend/db/: __init__.py  bronze_loader.py  bronze_schema.sql  schema.sql  session.py  utils.py
backend/db/data_model/: .user.yml  README.md  dbt_project.yml  profiles.yml
backend/db/data_model/models/: schema.yml
backend/db/data_model/models/bronze/: bronze_forecast_periods.sql  bronze_grid_data.sql  bronze_hourly_periods.sql  bronze_observations.sql  bronze_points.sql  bronze_stations.sql  bronze_zones.sql
backend/db/data_model/models/silver/hubs/: hub_office.sql  hub_resort.sql  hub_station.sql  hub_zone.sql
backend/db/data_model/models/silver/links/: link_resort_station.sql  link_resort_zone.sql  link_zone_office.sql
backend/db/data_model/models/silver/satellites/: sat_forecast_hourly.sql  sat_forecast_period.sql  sat_grid_data.sql  sat_observation.sql  sat_office_details.sql  sat_resort_details.sql  sat_station_details.sql  sat_zone_details.sql
backend/flows/: __init__.py
backend/models/: __init__.py  api.py  vault.py.old
backend/notebooks/: data_model_relationships.ipynb  db_exploration.ipynb  noaa_exploration.ipynb
